cabal-version:      2.4
name:               AdventOfCode2022
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Fabian Lippold
maintainer:         fabianlippold1184@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable AdventOfCode2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Lib, LibTH

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , extra
                    , split
                    , template-haskell
                    , formatting
                    , transformers
                    , ilist
                    , lens
                    , advent-of-code-api
                    , text
                    , dotenv
                    , containers
                    , timeit
                    , search-algorithms
                    , array
                    , vector
                    , linear
                    , range

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2 -optc-Ofast
